--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+  <div class="ui text container">
+  <h4><%= link_to 'Go to home page', root_url, class: 'ui teal button' %></h4>
+  <h4><%= link_to 'Create gallery', new_gallery_url, class: 'ui primary button' %></h4>
+  <div class="ui divider"></div>
     <%= yield %>
+  </div>
   </body>
 </html>
